kubernetes/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  containers:
  - name: goserver
    image: "giovanitrevisol/hello-go:lastest"
